sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() 
{
	var modifie=false
	for(k<-0 to getNombreValeurs()-1)
	{
		modifie=false
		for(i<-0 to getNombreValeurs()-2-i)
		{
			if(getValeur(k)==getValeur(k+1)
			{
				echange(k,k+1)
				modifie=true
			}
		}
		if(modifie)
			return
	}
}
